--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <p>
                 <strong>Interview Analysis Tool:</strong> Mengembangkan alat penilaian wawancara berbasis AI. 
                 Proyek ini mengintegrasikan FastAPI dengan Whisper untuk transkripsi, MediaPipe untuk pelacakan fokus mata, serta Gemini AI untuk penilaian otomatis.
-                link project: <a href="https://huggingface.co/spaces/handraaaa95/Interview-analysis" target="_blank">https://huggingface.co/spaces/handraaaa95/Interview-analysis</a>
+                link project: <a href="https://huggingface.co/spaces/handraaaa95/Interview-analysis" target="_blank">https://huggingface.co/spaces/handraaaa95/Interview-analysis</a> <br>
                 Email Spam Classification project <a href="https://datminemailspam.streamlit.app/" target="_blank">https://datminemailspam.streamlit.app/</a>
             </p>
         </section>
